addons/guestbook-app-ingress/fruits/banana.yaml
kind: Pod
apiVersion: v1
metadata:
  name: banana-app
  namespace: ingress-nginx
  labels:
    app: banana
spec:
  containers:
    - name: banana-app
      image: hashicorp/http-echo
      args:
        - "-text=banana"

---

kind: Service
apiVersion: v1
metadata:
  namespace: ingress-nginx
  name: banana-service
spec:
  selector:
    app: banana
  #type: NodePort
  ports:
    - port: 5678 # Default port for image
