addons/guestbook-app-ingress/fruits/ingress.yaml
apiVersion: extensions/v1beta1
kind: Ingress
metadata:
  name: fruits-ingress
  namespace: ingress-nginx
  annotations:
    kubernetes.io/ingress.class: "nginx"
spec:
  rules:
  - host: ingress.furiouscat.com
    http:
      paths:
      - path: /apple
        backend:
          serviceName: apple-service
          servicePort: 5678
      - path: /banana
        backend:
          serviceName: banana-service
          servicePort: 5678
